@@ -575,6 +575,8 @@ Usage: %s [-s] [-i infile] [-o outfile] pages [...] [infile [outfile]]\n",
 		inf = stdin;
 		if (!isatty(fileno(inf)))
 		  SET_BINARY(fileno(inf));
+		else
+		  goto usage;
 	} else if ((inf = fopen(DVIFileName, FOPEN_RBIN_MODE)) == 0)
 		error(1, -1, "cannot read %s", DVIFileName);
 
